samples/_failures_safe/1761510027_1df33d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e148fe2.c: In function ‘main’:
./samples/SAFE/__tmp_3e148fe2.c:152:5: error: expected declaration or statement at end of input
  152 |     }
      |     ^
